; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/arm/gen/extr_fpsetsticky_vfp.c_fpsetsticky.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/arm/gen/extr_fpsetsticky_vfp.c_fpsetsticky.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FP_X_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fpsetsticky(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 asm sideeffect "vmrs $0, fpscr", "=&r,~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !2
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @FP_X_MASK, align 4
  %8 = xor i32 %7, -1
  %9 = and i32 %6, %8
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %2, align 4
  %11 = xor i32 %10, -1
  %12 = load i32, i32* %4, align 4
  %13 = and i32 %12, %11
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  call void asm sideeffect "vmsr fpscr, $0", "r,~{dirflag},~{fpsr},~{flags}"(i32 %14) #1, !srcloc !3
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %2, align 4
  %17 = and i32 %15, %16
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 265}
!3 = !{i32 359}
